Closed
Bug 380749
Opened 18 years ago
Closed 18 years ago
Crash [@ nsAccessibilityService::GetInfo] wth appending caption in table with binding
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files, 1 obsolete file)
2.97 KB,
patch
|
aaronlev
:
review+
|
Details | Diff | Splinter Review |
1.66 KB,
text/html
|
Details |
See testcase, because of the use of enhanced privileges you need to download the testcase to your computer to get the crash.
It doesn't crash in branch builds.
If wanted, I can look for a regression range.
Talkback ID: TB32162797Y
nsAccessibilityService::GetInfo [mozilla/accessible/src/base/nsaccessibilityservice.cpp, line 281]
nsAccessibilityService::CreateHyperTextAccessible [mozilla/accessible/src/base/nsaccessibilityservice.cpp, line 531]
nsHTMLTableAccessible::GetCaption [mozilla/accessible/src/html/nshtmltableaccessible.cpp, line 256]
nsHTMLTableAccessible::CacheChildren [mozilla/accessible/src/html/nshtmltableaccessible.cpp, line 111]
nsAccessible::GetChildCount [mozilla/accessible/src/base/nsaccessible.cpp, line 795]
NS_InvokeByIndex_P [mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp, line 102]
XPCWrappedNative::CallMethod [mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2245]
Reporter | ||
Comment 1•18 years ago
|
||
The embedded xbl consists of this:
<?xml version="1.0"?>
<bindings xmlns="http://www.mozilla.org/xbl"
xmlns:html="http://www.w3.org/1999/xhtml">
<binding id="a">
<content>
<html:span style="display: none;"><children/></html:span>
</content>
</binding>
</bindings>
Assignee | ||
Updated•18 years ago
|
Assignee: aaronleventhal → mats.palmgren
Flags: in-testsuite?
OS: Windows XP → All
Hardware: PC → All
Assignee | ||
Comment 2•18 years ago
|
||
Add missing null-check (2nd change).
Don't warn about tables without a caption (1st change), or null frame
for table cells (3rd change) because that's normal.
Attachment #264919 -
Flags: review?(aaronleventhal)
Updated•18 years ago
|
Attachment #264919 -
Flags: review?(aaronleventhal) → review+
Reporter | ||
Comment 3•18 years ago
|
||
Aaron changed something in bug 268935 that makes the original testcase not work anymore.
This is the updated testcase, using nsIAccessibleRetrieval.
Attachment #264883 -
Attachment is obsolete: true
Assignee | ||
Comment 4•18 years ago
|
||
Checked in to trunk at 2007-05-17 01:21 PDT.
-> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 5•18 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070517 Minefield/3.0a5pre
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ nsAccessibilityService::GetInfo]
You need to log in
before you can comment on or make changes to this bug.
Description
•