Null-check the primary frame before using it. b=380749 r=aaronleventhal